@@ -281,7 +281,8 @@ Hopefully we will remove this configuration var soon)
 * upgrade1_5.php now requires to be run --update option to prevent confusion
 * (bug 17662) Customizable default preload/editintro in add-new-section link
   for Talk page
-* Added checks for common coding mistakes to syntaxChecker.php
+* Added maintenance script syntaxChecker.php that checks for PHP syntax errors
+  and common coding mistakes
 * Updated Unicode normalization tables
 
 === Bug fixes in 1.16 ===
